prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_array_to_int.nut
// EXPECTED: compile-time error - array assigned to int
local x: int = [1, 2, 3]
return x
